2.0.0/product-specifications/core-functions/4.-register-event.md
---
metaLinks:
  alternates:
    - >-
      https://app.gitbook.com/s/RziAMaeBMeyiTg5hfFq5/product-specifications/core-functions/4.-register-event
---

# 4. Register event

Once a declaration has been completed with all mandatory information as per the rules and regulations of the country. A Registrar is able to register it and create a permanently stored vital event record.

### **Configuration options:**

* Set registration number format

### **Pre-condition**

A record is in the Registrar’s Ready for review workqueue with the status ‘Declared’ or ‘Validated’

### **Triggers**

* A user with `scope:record.register[[event=event]` assigns and downloads the declaration
* A user with `scope:record.create[event=event]` & `scope:record.register[event=event]` starts and completes a new declaration

### **Standard flow**

1. User navigates to Ready for Review workqueue
2. User assigns themselves to the record
3. Declaration is downloaded and is now available to be validated and registered offline
4. User clicks “Review”
5. User validates declaration against supporting documents
6. User clicks “Register”
7. User confirms their intention to register the declaration
8. Declaration is sent to the Outbox for processing
9. Once processed the declaration status is updated to ‘Registered’

### **Post conditions**

* Registered record is sent to the Ready to Print workqueue. So a certificate can be printed and issued
* Record Audit is updated to show that the record has been ‘Registered’
* Informant receives sms notification with registration no.

### **Variations/Exceptions**

* The user can choose to change a part of the declaration before registered. If so they will receive a warning prompt about making changes. Before navigating them to the required section of the form. A audit log of this change is recorded in Record Audit.

{% embed url="https://youtu.be/xpfyxrTDJyE" %}
